<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_control</name>
  <version>0.0.0</version>
  <description>ABB arm control node for ROS 2</description>
  <maintainer email="akshaykumar.burusa@wur.nl">Akshay Kumar Burusa</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>abb_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
