<?xml version="1.0"?>
<package format="3">
  <name>ur5e_l515_description</name>
  <version>0.0.1</version>
  <description>UR5e + RealSense L515 camera mount description for RH-NBV thesis</description>
  <maintainer email="ayse@todo.todo">ayse</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_simulation_gz</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
